# MCP-Introduction-Course-Anthropic

./: README.md  mcp_client.py  mcp_server.py  pyproject.toml
app.egg-info/: PKG-INFO  requires.txt
